# spear

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: CompilerFlags.cmake  FindOpenMM.cmake  InstallChemfiles.cmake  spear-config-version.cmake.in  spear-config.cmake
include/spear/: AtomType.hpp  AtomicDistributions.hpp  Clustering.hpp  Configurations.hpp  Constants.hpp  Fingerprint.hpp  Forcefield.hpp  FunctionalGroup.hpp  Geometry.hpp  Graph.hpp  Graph_impl.hpp  Grid.hpp  Molecule.hpp  Molecule_impl.hpp  Octree.hpp  PartialCharge.hpp  Rings.hpp  ScoringFunction.hpp  Simulation.hpp  Typedefs.hpp  config.in.hpp  utils.hpp
include/spear/atomtypes/: Default.hpp  GAFF.hpp  IDATM.hpp  Sybyl.hpp  VinaType.hpp
include/spear/fingerprints/: Morgan.hpp
include/spear/forcefields/: AMBER.hpp  GAFF_FF.hpp  KnowledgeBasedSF.hpp
include/spear/partialcharges/: DefaultPartialCharge.hpp  Gasteiger.hpp
include/spear/scoringfunctions/: Bernard12.hpp  VinaScore.hpp
scripts/: clang_tidy.sh
share/: CMakeLists.txt  csd_distributions.dat.tgz
spearmint/: CMakeLists.txt  ligand.cpp  print_bonds.c  print_coords.c  print_neighbor.c  read_and_score.c  read_write.cpp  read_write_complex.c  receptor.cpp  spearmint.cpp  spearmint.cs  spearmint.h  spearmint_statics.hpp
src/: FunctionalGroup.cpp  Geometry.cpp  Molecule.cpp  Simulation.cpp  utils.cpp
src/atomtypes/: Default.cpp  GAFF.cpp  IDATM.cpp  Sybyl.cpp  VinaType.cpp
src/fingerprints/: Morgan.cpp
src/forcefields/: AMBER.cpp  GAFF_FF.cpp  KnowledgeBasedSF.cpp
src/partialcharges/: Gasteiger.cpp
src/scoringfunctions/: Bernard12.cpp  VinaScore.cpp
tests/: CMakeLists.txt  amber.cpp  bernard12.cpp  clustering.cpp  forcefield.cpp  functionalgroup.cpp  gaff.cpp  gaff_ff.cpp  gasteiger.cpp  geometry.cpp  grid.cpp  idatm.cpp  knowledgebasedsf.cpp  molecule.cpp  molecule_mod.cpp  morgan.cpp  octree.cpp  simulation.cpp  sybyl.cpp  utils_test.cpp  vina.cpp
tests/data/: 0t8.sdf  1nvq_ligand.sdf  3qox_ligand.sdf  Frog_2.sdf.xz  aromatics.sdf  large_rings.sdf  oxides.sdf  palmitic.sdf  palmitic_2d.sdf  pazopanib.sdf  pob.sdf  sybyl_test.mol2  tibolone.sdf
